# ciclorutas

./: .gitignore  ARQUITECTURA.md  Developer_Manual.docx  LISTA_EVENTOS_DES.md  Libro2.xlsx  Libro2_actualizado.xlsx  README.md  README_ARQUITECTURA.md  README_INSTALACION.md  README_MANUAL_USUARIO.md  README_MODELO_SIMULACION.md  Sim inicial.py  User_Manual.docx  config.py  interfaz_simulacion.py  main.py  pyproject.toml  requirements.txt  setup.py  simulacion_ciclorutas.py  tempCodeRunnerFile.py  test_simulador.py
Interfaz/: __init__.py
Interfaz/components/: app_principal.py
Interfaz/panels/: panel_control.py  panel_distribuciones.py  panel_estadisticas.py  panel_visualizacion.py  ventana_grafico_ocupacion.py
Interfaz/utils/: archivo_utils.py  cache_utils.py  estilo_utils.py
Simulador/: __init__.py
Simulador/core/: configuracion.py  simulador.py
Simulador/distributions/: distribucion_nodo.py
Simulador/models/: ciclista.py
Simulador/utils/: estadisticas_utils.py  generador_excel.py  grafo_utils.py  rutas_utils.py
examples/: ejemplo_basico.py
resultados/: README.md  red_1_tramo_20251117_170820.xlsx  red_1_tramo_20251117_212548.xlsx  red_1_tramo_con_Factor_04.xlsx  red_1_tramo_con_factor_025.xlsx  red_1_tramo_con_factor_055.xlsx  red_1_tramo_sinfactor_1.xlsx  red_1_tramo_sinfactor_16.xlsx  red_1_tramo_sinfactor_22.xlsx  red_2_tramo_16_08.xlsx  red_2_tramo_1_05.xlsx  red_2_tramo_20251117_172549.xlsx  red_2_tramo_20251117_212848.xlsx  red_2_tramo_215_11.xlsx  red_completa_20251118_165916.xlsx  red_completa_20251119_185557.xlsx
src/: __init__.py
src/config/: __init__.py  configuracion.py
src/core/: __init__.py  ciclista.py  generador.py  simulador.py
src/data/: __init__.py  distribuciones.py  estadisticas.py  grafo.py
src/ui/: interfaz_simulacion.py
src/utils/: validadores.py
tests/: test_simulador.py
