[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulador-ciclorutas"
version = "2.0.0"
description = "Simulador avanzado de ciclorutas con interfaz gráfica"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Sistema de Simulación de Ciclorutas", email = "contacto@ciclorutas.com"}
]
maintainers = [
    {name = "Sistema de Simulación de Ciclorutas", email = "contacto@ciclorutas.com"}
]
keywords = ["simulation", "cycling", "transportation", "network", "graph", "tkinter", "matplotlib"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "simpy>=3.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]

[project.scripts]
ciclorutas = "main:main"

[project.urls]
Homepage = "https://github.com/usuario/ciclorutas"
Documentation = "https://ciclorutas.readthedocs.io/"
Repository = "https://github.com/usuario/ciclorutas"
"Bug Tracker" = "https://github.com/usuario/ciclorutas/issues"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "simpy.*",
    "matplotlib.*",
    "tkinter.*",
    "pandas.*",
    "networkx.*",
    "scipy.*",
]
ignore_missing_imports = true
